syntax = "proto3";
package ptproto;
option go_package = "/ptproto";

import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

service PerformanceService {
  rpc RunnerExecStart(stream PerformanceExecStartReq) returns (stream PerformanceExecResp){};
  rpc RunnerExecStop(stream PerformanceExecStopReq) returns (stream PerformanceExecResp){};

  rpc ConductorGetGlobalVar (GlobalVarRequest) returns (google.protobuf.Int32Value);
  rpc ConductorAddGlobalVar (GlobalVarRequest) returns (google.protobuf.Int32Value);
  rpc ConductorClearGlobalVar (GlobalVarRequest) returns (google.protobuf.BoolValue);
  rpc ConductorClearAllGlobalVar (GlobalVarRequest) returns (google.protobuf.BoolValue);
}

message Scenario {
  int32 id = 1;
  string name = 2;

  string generateType = 3;

  // for constant generate type
  int32 target = 4;
  int32 duration = 5;

  // for ramp generate type
  repeated Stage stages = 6;

  bytes processorRaw = 7;
}

message Stage {
  int32 target = 1;
  int32 duration  = 2;
  int32 loop     = 3;
}

message PerformanceExecStartReq {
  string room = 1;
  int32 runnerId = 2;
  string runnerName = 3;
  string title = 4;

  int64 dur = 5;
  string mode = 6;
  repeated Scenario scenarios = 7;

  int32 weight = 8;
  int32 environmentId = 9;

  bytes localVarsCacheRaw = 10;
  bytes execSceneRaw = 11;

  string conductorGrpcAddress = 12;
  string influxdbAddress = 13;
  string influxdbOrg = 14;
  string influxdbToken = 15;
}
message PerformanceExecStopReq {
  string room = 1;
}

message PerformanceExecResp {
  string room = 1;
  int64 timestamp = 2;

  string instruction = 3;
  string execUUid = 4;
  int32 runnerId = 5;
  string runnerName = 6;

  int32 vuCount = 7;

  repeated PerformanceExecRecord requests = 8;
  PerformanceExecMetrics metrics = 9;
}

message PerformanceExecRecord {
  int32 recordId = 1;
  string recordName = 2;
  int32 vuId = 3;

  string status = 4;
  int64 startTime = 5;
  int64 endTime = 6;
  int32 duration = 7;
  string msg = 8;
}

message PerformanceExecMetrics {
  int64 timestamp = 1;

  double cpuUsage = 2;
  double memoryUsage = 3;
  map<string, double> diskUsages = 4;
  map<string, double> networkUsages = 5;

  //  string ip = 7;
  //  int32 maxGoroutines = 8;
  //  int32 currentGoroutines = 9;
  //  int32 serverType = 10;
}

message GlobalVarRequest {
  string room = 1;
  string name = 2;
  google.protobuf.Value value = 3;
}

message GlobalVarResponse {
  int32 value = 1;
}